--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "devDependencies": {
     "@types/axios": "^0.14.4",
     "@types/node": "^22.10.2",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "path": "^0.12.7",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
